--- a/package.json
+++ b/package.json
@@ -1,30 +1,38 @@
 {
-  "name": "babel_webpack_starter",
+  "name": "typescript-webpack-react",
   "version": "1.0.0",
-  "description": "Starter pack for compiling ES6+ apps to ES5",
+  "description": "Template for React apps in typescript",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --output-public-path=/build/  --mode development --progress --open --hot",
-    "build": "webpack --mode production --config webpack.config.js",
-    "dev": "webpack serve --open 'Brave'"
+    "starts": "webpack-dev-server --output-public-path=/build/  --mode development --progress --open --hot",
+    "build": "webpack --mode=production",
+    "start": "webpack --mode=development"
   },
   "author": "Kunal Saini",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/polyfill": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
-    "babel": "^6.23.0",
-    "babel-loader": "^8.0.5",
+    "@babel/core": "^7.12.16",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.12.16",
+    "@babel/preset-react": "^7.12.13",
+    "@babel/preset-typescript": "^7.12.16",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
+    "@webpack-cli/serve": "^1.3.0",
+    "babel-loader": "^8.2.2",
     "babel-plugin-loop-optimizer": "^1.4.1",
     "css-loader": "^5.0.2",
+    "sass": "^1.32.7",
+    "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
-    "webpack": "^4.16.1",
-    "webpack-cli": "^3.0.8",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "chokidar": "^3.4.3"
+    "chokidar": "^3.5.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
