--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "starts": "webpack-dev-server --output-public-path=/build/  --mode development --progress --open --hot",
-    "build": "webpack --mode=production",
-    "start": "webpack --mode=development"
+    "build": "webpack -p --mode=production",
+    "start": "webpack-dev-server --mode=development"
   },
   "author": "Kunal Saini",
   "license": "MIT",
@@ -23,11 +23,14 @@
     "babel-loader": "^8.2.2",
     "babel-plugin-loop-optimizer": "^1.4.1",
     "css-loader": "^5.0.2",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.1.0",
     "sass": "^1.32.7",
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.5",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.21.2",
+    "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
