--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "starts": "webpack-dev-server --output-public-path=/build/  --mode development --progress --open --hot",
-    "build": "webpack -p --mode=production",
-    "start": "webpack-dev-server --mode=development"
+    "start": "webpack serve --mode development --progress --open",
+    "build": "webpack --mode=production"
   },
   "author": "Kunal Saini",
   "license": "MIT",
@@ -19,17 +18,24 @@
     "@babel/preset-typescript": "^7.12.16",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^4.15.1",
     "@webpack-cli/serve": "^1.3.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-loop-optimizer": "^1.4.1",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.2",
+    "eslint": "^7.20.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-react": "^7.22.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.1.0",
     "sass": "^1.32.7",
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
+    "typescript": "^4.1.5",
     "url-loader": "^4.1.1",
-    "webpack": "^5.21.2",
+    "webpack": "^5.24.2",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
   },
