--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,15 @@
 {
-	"presets": ["@babel/preset-env", "@babel/preset-typescript", "@babel/preset-react"],
-	"plugins": ["babel-plugin-loop-optimizer"]
+	"presets": ["@babel/preset-env", "@babel/preset-react"],
+	"env":{
+		"production":{
+			"presets": ["react-optimize", "preval"],
+			"plugins": [""]
+		}
+	},
+	"plugins": [
+		"babel-plugin-loop-optimizer",
+		"faster.js",
+		"closure-elimination",
+		"babel-plugin-idx"
+	]
 }
