--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Template for React apps in typescript",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --mode development --progress --open",
+    "start": "webpack --mode=development",
+    "start:serve": "webpack serve --mode=development --progress --open",
     "build": "webpack --mode=production"
   },
   "author": "Kunal Saini",
@@ -18,21 +18,28 @@
     "@babel/preset-typescript": "^7.12.16",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.15.1",
+    "@typescript-eslint/eslint-plugin": "^4.16.1",
+    "@typescript-eslint/parser": "^4.16.1",
     "@webpack-cli/serve": "^1.3.0",
     "babel-loader": "^8.2.2",
+    "babel-plugin-closure-elimination": "^1.3.2",
+    "babel-plugin-idx": "^2.4.0",
     "babel-plugin-loop-optimizer": "^1.4.1",
+    "babel-plugin-preval": "^5.0.0",
+    "babel-preset-react-optimize": "^1.0.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.2",
-    "eslint": "^7.20.0",
+    "eslint": "^7.21.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.22.0",
+    "faster.js": "^1.1.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.1.0",
+    "idx": "^2.5.6",
     "sass": "^1.32.7",
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
+    "ts-loader": "^8.0.17",
     "typescript": "^4.1.5",
     "url-loader": "^4.1.1",
     "webpack": "^5.24.2",
