--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Template for React apps in typescript",
   "main": "app.js",
   "scripts": {
-    "start": "webpack --mode=development",
+	"dev:build": "webpack --watch --mode=production",
+    "start": "webpack --watch --mode=development",
     "start:serve": "webpack serve --mode=development --progress --open",
     "build": "webpack --mode=production"
   },
@@ -15,7 +16,7 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.12.16",
     "@babel/preset-react": "^7.12.13",
-    "@babel/preset-typescript": "^7.12.16",
+    "@babel/preset-typescript": "^7.13.0",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
@@ -34,6 +35,7 @@
     "eslint-plugin-react": "^7.22.0",
     "faster.js": "^1.1.1",
     "file-loader": "^6.2.0",
+    "fork-ts-checker-webpack-plugin": "^6.1.1",
     "html-webpack-plugin": "^5.1.0",
     "idx": "^2.5.6",
     "sass": "^1.32.7",
