--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Template for React apps in typescript",
   "main": "app.js",
   "scripts": {
-	"dev:build": "webpack --watch --mode=production",
+    "dev:build": "webpack --watch --mode=production",
     "start": "webpack --watch --mode=development",
     "start:serve": "webpack serve --mode=development --progress --open",
     "build": "webpack --mode=production"
@@ -45,8 +45,9 @@
     "typescript": "^4.1.5",
     "url-loader": "^4.1.1",
     "webpack": "^5.24.2",
-    "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.7.3"
   },
   "dependencies": {
     "chokidar": "^3.5.1",
